# cef_view

./: .gitignore  CMakeLists.txt  CODEBUDDY.md  FilterFolder.cmake  GenerateProject.bat  GenerateProject.ps1  GenerateProject.sh  README.md
.specify/memory/: constitution.md
specs/001-cefwebview-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cefwebview-control/checklists/: requirements.md
specs/001-cefwebview-control/contracts/: cefwebview-api.md
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/app/mac/: AppDelegate.h  AppDelegate.mm  CefViewApplication.h  CefViewApplication.mm  Info.plist.in  MainWindow.h  MainWindow.mm  helper-Info.plist.in  main.mm
src/app/win/: MainWindow.cpp  MainWindow.h  app.manifest  main.cpp
src/cef_view/: CMakeLists.txt
src/cef_view/bridge/: CefJsBridgeBrowser.cpp  CefJsBridgeBrowser.h  CefJsBridgeRender.cpp  CefJsBridgeRender.h  CefJsHandler.cpp  CefJsHandler.h
src/cef_view/client/: CefClientBrowser.cpp  CefClientRender.cpp  CefClientRender.h  CefSwitches.h  CefViewApp.cpp  CefViewApp.h  CefViewAppDelegateInterface.h  CefViewAppDelegateRenderer.cpp  CefViewAppDelegateRenderer.h  CefViewClient.cpp  CefViewClient.h  CefViewClientDelegateInterface.h
src/cef_view/global/: CefConfig.h  CefContext.cpp  CefContext.h  CefManager.cpp  CefManager.h
src/cef_view/osr/: BytesWriteHandler.cpp  BytesWriteHandler.h  OsrDragdropEvents.h  OsrDragdropWin.cc  OsrDragdropWin.cpp  OsrDragdropWin.h  OsrImeHandlerWin.cc  OsrImeHandlerWin.cpp  OsrImeHandlerWin.h  OsrRenderer.cpp  OsrRenderer.h  OsrRendererD3D11.cpp  OsrRendererD3D11.h  OsrRendererGL.cpp  OsrRendererGL.h
src/cef_view/osr/mac/: OsrCefTextInputClient.h  OsrCefTextInputClient.mm  OsrRendererMetal.h  OsrRendererMetal.mm
src/cef_view/osr/win/: OsrDragdropWin.cpp  OsrDragdropWin.h  OsrImeHandlerWin.cpp  OsrRendererD3D11.cpp  OsrRendererD3D11.h
src/cef_view/scheme/: SchemeResourceHandler.cpp  SchemeResourceHandler.h
src/cef_view/utils/: AcrylicHelper.cpp  AcrylicHelper.h  CefSwitches.cpp  CefSwitches.h  FileUtil.cc  FileUtil.cpp  FileUtil.h  GeometryUtil.cc  GeometryUtil.h  LogUtil.h  PathUtil.cc  PathUtil.cpp  PathUtil.h  ScreenUtil.cpp  ScreenUtil.h  WinCompositionBackdrop.cpp  WinCompositionBackdrop.h  WinMaterial.cpp  WinMaterial.h  WinUtil.cc  WinUtil.h  util.h
src/cef_view/utils/mac/: PathUtil.mm
src/cef_view/utils/win/: PathUtil.cpp  WinMaterial.cpp  WinUtil.cpp  WinUtil.h
src/cef_view/view/: CefViewClientDelegate.cpp  CefViewClientDelegate.h  CefWebView.cpp  CefWebView.h  CefWebViewSetting.h  ProcessMessageDelegate.h  ProcessMessageHandler.h
src/cef_view/view/mac/: CefViewClientDelegate.h  CefViewClientDelegate.mm  CefWebView.h  CefWebView.mm
src/cef_view/view/win/: CefViewClientDelegate.cpp  CefViewClientDelegate.h  CefWebView.cpp  CefWebView.h
src/cefview/: CMakeLists.txt
src/cefview/bridge/: CefJsBridgeBrowser.cpp  CefJsBridgeBrowser.h  CefJsHandler.cpp
src/cefview/client/: CefClient.cpp  CefClient.h  CefClientBrowser.cpp  CefClientBrowser.h  CefClientRender.cpp  CefClientRender.h  CefJsBridgeRender.cpp  CefJsBridgeRender.h  CefJsHandler.cpp  CefJsHandler.h  CefSwitches.cpp  CefSwitches.h  CefViewApp.cpp  CefViewApp.h  CefViewAppDelegateBase.h  CefViewAppDelegateInterface.h  CefViewClient.cpp  CefViewClient.h  CefViewClientDelegateBase.h  CefViewClientDelegateInterface.h
src/cefview/global/: CefConfig.h  CefManager.cpp
src/cefview/handler/: CefHandler.cpp  CefHandler.h  CefJsBridgeBrowser.cpp  CefJsBridgeBrowser.h
src/cefview/handler/drag/: util_win.cc  util_win.h
src/cefview/manager/: CefManager.cpp  CefManager.h
src/cefview/osr/: BytesWriteHandler.cc  OsrRenderer.cc  OsrRenderer.h  OsrRendererD3D11.h
src/cefview/util/: export.h
src/cefview/utils/: FileUtil.cc  WinUtil.cc  WinUtil.h  export.h  util_win.cc  util_win.h
src/cefview/view/: CefView.h  CefViewBase.cpp  CefViewBase.h  CefViewClientDelegate.cpp  CefViewClientDelegate.h  CefViewListener.h  CefWebView.cpp  CefWebView.h  CefWebViewBase.cpp  CefWebViewBase.h  CefWebViewListener.h  CefWebViewSetting.h  ProcessMessageDelegate.cpp  ProcessMessageDelegate.h  ProcessMessageDelegateWrapper.cpp  ProcessMessageDelegateWrapper.h  ProcessMessageHandler.h
src/resource/: index.html
src/sub_process/: CMakeLists.txt  HelperProcess.mm  SubProcessMain.cpp  main_process.cpp
src/webview/: CMakeLists.txt
src/webview/client/: CefClient.cpp  CefClient.h  CefClientAPi.h  CefClientBrowser.cpp  CefClientBrowser.h  CefClientRender.cpp  CefJsBridgeRender.h  CefSwitches.h  js_handler.h
src/webview/handler/: CefHandler.cpp
src/webview/manager/: CefManager.h
src/webview/osr_renderer/: osr_renderer.cc
src/webview/util/: util.h
src/webview/view/: CefView.cpp  ProcessMessageDelegateWrapper.cpp  ProcessMessageHandler.h
